# madness

./: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
admin/: acinclude.m4.in  admin_patch  am_edit  cvs.sh
admin/CVS/: Entries  Root
madness/: Makefile.am  Makefile.in  madness.cpp  madness.desktop  madness.h  main.cpp
