bin_PROGRAMS    = madness
INCLUDES        = $(all_includes)
madness_LDFLAGS = $(all_libraries)
madness_LDADD   = $(LIB_KDEUI)
madness_SOURCES =	main.cpp madness.cpp
noinst_HEADERS  = madness.h
METASOURCES     = AUTO
KDE_ICON        = AUTO
kdelnkdir       = $(kde_appsdir)/Toys
kdelnk_DATA     = madness.desktop

